[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Objects/SideRoomDoor.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Door/door_sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Door/DoorOverlay.png" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/SFX/HeavyDoor.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/SFX/Stingers/Stinger2.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 16 )

[node name="SideRoomDoor" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 6

[node name="Overlay" type="Sprite" parent="."]
visible = false
z_index = 4096
texture = ExtResource( 3 )
vframes = 2
hframes = 6

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 3 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
bus = "SFX"

[node name="SFX2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 4.741
bus = "SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
